--- a/Deployment.yml
+++ b/Deployment.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: sample-webpage
 spec:
-  replicas: 5
+  replicas: 2
   selector:
     matchLabels:
       app: sample-webpage
@@ -17,3 +17,17 @@ spec:
         image: sample-app:63
         ports:
         - containerPort: 80
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: sample-webpage-service
+spec:
+  selector:
+    app: sample-webpage
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
